<resources>
    <string name="app_name">Creator Code Tfue!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_navigation">navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_subtitle">Charles, Jeff, Talia, Chris</string>
    <string name="nav_header_title">CreatorCodeTfue</string>
    <string name="contdesc">Image Upload</string>
    <string name="upload">Upload Picture</string>
    <string name="nav_header_desc">CreatorCodeTfue</string>
    <string name="recipeName">Recipe Name</string>
    <string name="prepTime">Preparation Time (minutes)</string>
    <string name="cookTime">Cooking Time (minutes)</string>
    <string name="difficulty">Difficulty (1-10)</string>
    <string name="serves">Servings</string>
    <string name="directions">Directions</string>
    <string name="ingredients">Ingredients</string>
    <string name="basket">Item Basket</string>
    <string name="recipes">Recipes</string>
    <string-array name="list_entries">
        <item>Item 1</item>
        <item>Item 2</item>
        <item>Item 3</item>
        <item>Item 4</item>
        <item>Item 5</item>

    </string-array>
</resources>
